@@ -1,3 +1,14 @@
+2006-12-10  Lukasz Zalewski  <lukas@dcs.qmul.ac.uk>
+
+	* vicious-extension/ve-nongnome.c, gui/gdmsetup.c,
+	  gui/gdmsetup.glade, gui/greeter/greeter.c,
+          gui/gdmlogin.c, gui/gdmchooser.c, gui/gdmsession.[ch],
+          gui/gdmcommon.c, gui/greeter/greeter_canvas_item.c,
+          gui/greeter_item_customlist.c,
+          gui/greeter/greeter_item_pam.c,
+          gui/greeter/greeter_geometry.c: Additional fixes for bug/feature
+          request #334186.  Fixed some of the compiler warnings.
+
 2006-12-08  Brian Cameron  <brian.cameron@sun.com>
 
 	* gui/modules/AccessDwellMouseEvents.in,
